# kspir

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  answer.cpp  answer.h  constants.cpp  crt.cpp  crt.h  encrypt.cpp  encrypt.h  lwe.cpp  lwe.h  ntt.cpp  ntt.h  params.h  pir.h  query.cpp  query.h  recover.cpp  recover.h  samples.cpp  samples.h  secret.cpp  secret.h  twosteps.cpp  twosteps.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test-avx2.cpp  test-avx512.cpp  test-dummy-data.cpp  test-expand.cpp  test-fft.cpp  test-first-construction.cpp  test-first-dimension.cpp  test-larger-database.cpp  test-multi.cpp  test-ntt-speed.cpp  test-ntt.cpp  test-packing-lwes.cpp  test-pir.cpp  test-setup.cpp  test-two-dimensions.cpp  test-two-steps-key.cpp  test-two-steps.cpp  test-utils.cpp  test.txt
