# add extra tests

add_executable(test-ntt            ${PROJECT_SOURCE_DIR}/tests/test-ntt.cpp)
add_executable(test-utils          ${PROJECT_SOURCE_DIR}/tests/test-utils.cpp)
add_executable(test-packing-lwes   ${PROJECT_SOURCE_DIR}/tests/test-packing-lwes.cpp)
add_executable(test-two-dimensions ${PROJECT_SOURCE_DIR}/tests/test-two-dimensions.cpp)
add_executable(test-first-construction ${PROJECT_SOURCE_DIR}/tests/test-first-construction.cpp)
add_executable(test-setup          ${PROJECT_SOURCE_DIR}/tests/test-setup.cpp)
add_executable(test-expand         ${PROJECT_SOURCE_DIR}/tests/test-expand.cpp)
add_executable(test-two-steps      ${PROJECT_SOURCE_DIR}/tests/test-two-steps.cpp)
add_executable(test-pir            ${PROJECT_SOURCE_DIR}/tests/test-pir.cpp)
add_executable(test-two-steps-key  ${PROJECT_SOURCE_DIR}/tests/test-two-steps-key.cpp)
# add_executable(test-stateless      ${PROJECT_SOURCE_DIR}/tests/test-stateless.cpp)
add_executable(test-multi          ${PROJECT_SOURCE_DIR}/tests/test-multi.cpp)
# add_executable(test-avx2           ${PROJECT_SOURCE_DIR}/tests/test-avx2.cpp)
add_executable(test-fft            ${PROJECT_SOURCE_DIR}/tests/test-fft.cpp)
add_executable(test-ntt-speed      ${PROJECT_SOURCE_DIR}/tests/test-ntt-speed.cpp)
add_executable(test-avx512         ${PROJECT_SOURCE_DIR}/tests/test-avx512.cpp)

target_include_directories(test-ntt             PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_include_directories(test-utils           PUBLIC ${PROJECT_SOURCE_DIR}/src)
#target_include_directories(test-utils           PUBLIC "/usr/local/include")
target_include_directories(test-packing-lwes    PUBLIC ${PROJECT_SOURCE_DIR}/src)
#target_include_directories(test-packing-lwes    PUBLIC "/usr/local/include")
target_include_directories(test-two-dimensions  PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_include_directories(test-first-construction PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_include_directories(test-setup           PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_include_directories(test-expand          PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_include_directories(test-two-steps       PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_include_directories(test-pir             PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_include_directories(test-two-steps-key   PUBLIC ${PROJECT_SOURCE_DIR}/src)
# target_include_directories(test-stateless       PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_include_directories(test-multi           PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_include_directories(test-fft             PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_include_directories(test-ntt-speed       PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_include_directories(test-avx512          PUBLIC ${PROJECT_SOURCE_DIR}/src)

target_link_libraries(test-ntt                pir)
target_link_libraries(test-utils              pir HEXL::hexl)
target_link_libraries(test-packing-lwes       pir HEXL::hexl)
target_link_libraries(test-two-dimensions     pir HEXL::hexl)
target_link_libraries(test-first-construction pir HEXL::hexl)
target_link_libraries(test-setup              pir HEXL::hexl)
target_link_libraries(test-expand             pir HEXL::hexl)
target_link_libraries(test-two-steps          pir HEXL::hexl)
target_link_libraries(test-pir                pir HEXL::hexl)
target_link_libraries(test-two-steps-key      pir HEXL::hexl)
# target_link_libraries(test-stateless          pir HEXL::hexl)
target_link_libraries(test-multi              pir HEXL::hexl)
target_link_libraries(test-fft                pir)
target_link_libraries(test-ntt-speed          pir HEXL::hexl)
target_link_libraries(test-avx512             pir HEXL::hexl)
